--- a/frontend/views/login/formularioLogin.html
+++ b/frontend/views/login/formularioLogin.html
@@ -15,7 +15,7 @@
       <label>(*) Informaci&oacute;n requerida</label>
       <br />
       <center>
-      <button type="submit" name="Ingresar" value="Ingresar" style="width:15em;" class="crear_cliente" ng-click="validateSession(loginForm.user,loginForm.password)">Ingresar</button>
+      <button type="submit" name="Ingresar" value="Ingresar" style="width:15em;" class="consultar" ng-click="validateSession(loginForm.user,loginForm.password)">Ingresar</button>
       </center>
     </form>
   </div>
