--- a/frontend/views/login/formularioResetPassword.html
+++ b/frontend/views/login/formularioResetPassword.html
@@ -14,7 +14,7 @@
       <label>(*) Informaci&oacute;n requerida</label>
       <br />
       <center>      
-      <button name="Reestablecer" value="Reestablecer" style="width:15em;" class="crear_cliente" ng-click="resetPassword(resetPasswordForm.password_act,resetPasswordForm.password_new,resetPasswordForm.password_new1)">Reestablecer</button>
+      <button name="Reestablecer" value="Reestablecer" style="width:15em;" class="consultar" ng-click="resetPassword(resetPasswordForm.password_act,resetPasswordForm.password_new,resetPasswordForm.password_new1)">Reestablecer</button>
       <br />
       <br />
       <button style="width:15em;" class="volver" ng-click="returnMenuIndex()">Volver</button>
