--- a/frontend/views/inmuebles/formularioInmuebleList.html
+++ b/frontend/views/inmuebles/formularioInmuebleList.html
@@ -85,7 +85,9 @@
         <div ng-repeat='inmuebleRespuesta in listaInmueblesClienteRespuesta' class="panel-body">
           <br />          
           <div style="text-align: center;">
-            <p>Cliente: {{nombre_cliente_inmueble}}</p> 
+            <p>Cliente: {{nombre_cliente_inmueble}} <br />
+               Asesor cliente: {{asesor_cliente}}
+            </p> 
           </div>
           <table ng-init='configPagesInm()' style="width:80%;">  
             <thead>
@@ -105,15 +107,18 @@
                   <p>&nbsp;</p> 
                   <p style="font-weight: bold;">{{inmuebleRespuesta.title}}</p>    
                   <p style="font-weight: bold;">{{inmuebleRespuesta.iso_currency}} {{inmuebleRespuesta.sale_price_label}}</p>                  
-                  <p>Relaci&oacute;n del cliente con el inmueble: {{inmuebleRespuesta.tipo_cliente}}</p>              
+                  <p>Relaci&oacute;n del cliente con el inmueble: {{inmuebleRespuesta.tipo_cliente}}</p>   
+                  <p>Asesor inmobiliaria: {{inmuebleRespuesta.asesor}}</p>   
+                  <p>Tel&eacute;fono asesor: {{inmuebleRespuesta.asesor_telefono}}</p>  
+                  <p>Email asesor: {{inmuebleRespuesta.asesor_email}}</p>     
                   <p ng-if="inmuebleRespuesta.country_label!=''"><br />Pa&iacute;s: {{inmuebleRespuesta.country_label}}</p>      
                   <p ng-if="inmuebleRespuesta.city_label!=''">Ciudad: {{inmuebleRespuesta.city_label}}, {{inmuebleRespuesta.region_label}}</p>                  
-                  <p ng-if="inmuebleRespuesta.zone_label!=''">Zona: {{inmuebleRespuesta.zone_label}}</p>           
+                  <p ng-if="inmuebleRespuesta.zone_label!=''">Zona: {{inmuebleRespuesta.zone_label}}</p>        
                   <p ng-if="inmuebleRespuesta.area!=''">&Aacute;rea: {{inmuebleRespuesta.area}} {{inmuebleRespuesta.unit_area_label}}</p>
                   <p ng-if="inmuebleRespuesta.built_area!=''">&Aacute;rea constru&iacute;da: {{inmuebleRespuesta.built_area}} {{inmuebleRespuesta.unit_built_area_label}}</p>
                   <p ng-if="inmuebleRespuesta.private_area!=''">&Aacute;rea privada: {{inmuebleRespuesta.built_area}} {{inmuebleRespuesta.unit_private_area_label}}</p>
                   <p ng-if="inmuebleRespuesta.property_condition_label=='Used'">Condici&oacute;n: usado</p> 
-                  <p ng-if="inmuebleRespuesta.property_condition_label=='New'">Condici&oacute;n: nuevo</p>                 
+                  <p ng-if="inmuebleRespuesta.property_condition_label=='New'">Condici&oacute;n: nuevo</p>      
                   <p ng-if="inmuebleRespuesta.availability_label=='Available'">Estado: disponible</p>
                   <p ng-if="inmuebleRespuesta.availability_label=='Sold'">Estado: vendido</p>
                   <p ng-if="inmuebleRespuesta.availability_label=='Rented'">Estado: alquilado</p>
